<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="custom_download">CustomDownloadFile</string>

    <string name="glide_radio_text">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_radio_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="title_activity_detail">DetailActivity</string>

    <string name="notification_channel_id">channelId</string>
    <string name="notification_channel_name">default_channel</string>
    <string name="notification_channel_description">This is the default channel</string>
    <string name="notification_button_text">Check the status</string>

    <string name="error_toast_message">Please select the file to download</string>
    <string name="button_complete_label">Download completed</string>
    <string name="button_loading_label">Downloading…</string>
    <string name="button_label">Download</string>

    <string name="file_name_label">File name:</string>

    <string name="status_label">Status:</string>
    <string name="status_success">Success</string>
    <string name="status_failed">Failed</string>
    <string name="status_error">Error</string>
    <string name="ok">OK</string>
    
    <string name="wait_for_connection">We are waiting for internet connection and we will start your download</string>
    <string name="url_bad_written">URL bad written, try again with a correct URL</string>

    <string name="first_label">Download one of our project…</string>
    <string name="second_label">…or download a your custom file</string>

    <string name="your_file_ready">Your file is ready!</string>
    <string name="wait_for_your_download">Penguin is waiting for your Download…</string>

</resources>
