<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.DetailActivity"
        tools:showIn="@layout/activity_detail">

        <TextView
            android:id="@+id/file_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/file_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/status_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file_name_value" />

        <TextView
            android:id="@+id/file_name_value"
            style="@style/ResultTextAppareance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/file_name_label"
            app:layout_constraintTop_toTopOf="@+id/file_name_label" />

        <TextView
            android:id="@+id/status_value"
            style="@style/ResultTextAppareance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintStart_toStartOf="@+id/file_name_value"
            app:layout_constraintTop_toTopOf="@+id/status_label" />

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layoutDescription="@xml/motion_step"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_value">


        </androidx.constraintlayout.motion.widget.MotionLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>